# axum_crud

./: .sample.env  Cargo.toml  Makefile  docker-compose.yaml
migrations/: 20231115160251_init.sql  20231121160912_label.sql
src/: handlers.rs  main.rs  repositories.rs
src/handlers/: label.rs  todo.rs
src/repositories/: label.rs  todo.rs
